chore(docs): add email verification for reset the password to Swagger
